--- a/testing-public/index.html
+++ b/testing-public/index.html
@@ -2,22 +2,21 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Codeblocks – Groep 7 & 8</title>
 
-  <!-- Plausible (zelfde als main) -->
-  <script defer data-domain="codeblocks.nl" src="https://plausible.io/js/script.outbound-links.tagged-events.js"></script>
-  <script>window.plausible=window.plausible||function(){(window.plausible.q=window.plausible.q||[]).push(arguments)}</script>
+  <!-- Fonts + favicon -->
+  <link rel="preconnect" href="https://fonts.gstatic.com"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet"/>
+  <link rel="icon" href="https://cdn.codeblocks.nl/general/files/images/favicon.jpg" type="image/x-icon"/>
 
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet" />
-  <link rel="icon" href="https://cdn.codeblocks.nl/general/files/images/favicon.jpg" type="image/x-icon" />
-  <link rel="stylesheet" href="style.css" />
-  <script src="main.js" defer></script>
+  <!-- JOUW basisstijl -->
+  <link rel="stylesheet" href="style.css"/>
 
-  <!-- Mini component-styles (sluiten aan op je tokens) -->
+  <!-- Subpagina extra CSS -->
   <style>
-    .sub-breadcrumb{font-size:.9rem;color:var(--clr-text-muted);margin-top:.5rem}
+    /* badges, modal, quiz – sluit aan op je tokens */
+    .sub-breadcrumb{font-size:.9rem;color:var(--clr-text-muted);margin-top:.75rem}
     .badge{display:inline-block;padding:.25rem .6rem;border-radius:.75rem;background:rgba(255,255,255,.06);
       border:1px solid rgba(255,255,255,.08);font-size:.8rem;color:var(--clr-primary-light)}
     .pill{display:inline-flex;gap:.4rem;align-items:center}
@@ -29,19 +28,20 @@
     .modal-head{display:flex;align-items:center;justify-content:space-between;gap:1rem;margin-bottom:.75rem}
     .modal-body{background:var(--clr-bg-accent);border-radius:calc(var(--radius) - .25rem);padding:1rem;min-height:360px}
     .close-x{background:none;border:0;color:var(--clr-text);font-size:1.4rem;cursor:pointer}
-    .meta{display:flex;gap:.5rem;flex-wrap:wrap}
     /* Quiz */
     .quiz{display:grid;gap:1rem}
     .quiz .q{padding:1rem;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.08);border-radius:var(--radius)}
     .choices{display:grid;gap:.5rem;margin-top:.5rem}
     .choices button{all:unset;cursor:pointer;padding:.6rem .8rem;border-radius:.7rem;border:1px solid rgba(255,255,255,.12)}
     .choices button:hover{background:rgba(255,255,255,.06)}
+    .choices button[aria-pressed="true"]{background:rgba(115,85,255,.18)}
     .quiz-result{padding:.8rem;border-radius:.7rem;background:rgba(115,85,255,.12);border:1px solid rgba(115,85,255,.35);display:none}
+    /* minor tweak */
+    .card-content .meta{display:flex;gap:.5rem;flex-wrap:wrap}
   </style>
 </head>
-
 <body>
-  <!-- ===== HEADER (zelfde) ===== -->
+  <!-- ===== HEADER ===== -->
   <header class="site-header">
     <div class="container header-container">
       <div class="logo">
@@ -71,14 +71,14 @@
     </div>
   </section>
 
-  <!-- ===== PRODUCTKAARTEN ===== -->
+  <!-- ===== KAARTEN (Mediawijsheid & Blockly) ===== -->
   <section class="content-blocks" id="tools">
     <div class="container">
       <div class="blocks-container">
         <!-- Mediawijsheid -->
         <article class="content-card">
           <div class="card-image">
-            <img src="https://images.unsplash.com/photo-1526378722484-bd91ca387e72?q=80&w=1440&auto=format&fit=crop" alt="Mediawijsheid" />
+            <img src="https://images.unsplash.com/photo-1526378722484-bd91ca387e72?q=80&w=1400&auto=format&fit=crop" alt="Mediawijsheid"/>
           </div>
           <div class="card-content">
             <h2>Mediawijsheid</h2>
@@ -94,7 +94,7 @@
         <!-- Blockly -->
         <article class="content-card">
           <div class="card-image">
-            <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?q=80&w=1440&auto=format&fit=crop" alt="Blockly demoles" />
+            <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?q=80&w=1400&auto=format&fit=crop" alt="Blockly demo"/>
           </div>
           <div class="card-content">
             <h2>Blockly Programmeren</h2>
@@ -110,7 +110,7 @@
     </div>
   </section>
 
-  <!-- ===== MEDIAWIJSHEID MINI-QUIZ ===== -->
+  <!-- ===== MINI-QUIZ MEDIAWIJSHEID ===== -->
   <section class="info-section alternate-bg" id="media-quiz">
     <div class="container split-container">
       <div class="text-content">
@@ -118,16 +118,14 @@
         <p class="large-paragraph">3 snelle situaties. Kies wat jij zou doen—je krijgt meteen uitleg. Perfect als instap.</p>
 
         <div class="quiz" id="quiz">
-          <!-- Q1 -->
           <div class="q">
-            <strong>1. Je krijgt een DM: “Je account wordt gesloten, klik nu op deze link.”</strong>
+            <strong>1. DM: “Je account wordt gesloten, klik nu op deze link.”</strong>
             <div class="choices">
               <button data-q="1" data-a="wrong">Klikken, dan ben ik snel.</button>
               <button data-q="1" data-a="right">Niet klikken; afzender checken en melden.</button>
               <button data-q="1" data-a="wrong">Doen als de profielfoto echt lijkt.</button>
             </div>
           </div>
-          <!-- Q2 -->
           <div class="q">
             <strong>2. Je wilt een foto posten. Wat check je eerst?</strong>
             <div class="choices">
@@ -135,12 +133,11 @@
               <button data-q="2" data-a="wrong">Alleen of de filter mooi is.</button>
             </div>
           </div>
-          <!-- Q3 -->
           <div class="q">
-            <strong>3. Je leest nieuws dat te mooi is om waar te zijn. Wat nu?</strong>
+            <strong>3. Nieuws dat te mooi is om waar te zijn. Wat nu?</strong>
             <div class="choices">
               <button data-q="3" data-a="right">Bron, datum en auteur checken.</button>
-              <button data-q="3" data-a="wrong">Doorsturen: “kijk snel!”</button>
+              <button data-q="3" data-a="wrong">Doorsturen: “kijk snel!”.</button>
             </div>
           </div>
 
@@ -150,7 +147,7 @@
       </div>
 
       <div class="image-content">
-        <img src="https://images.unsplash.com/photo-1526378722484-bd91ca387e72?q=80&w=1440&auto=format&fit=crop" alt="Mediawijs online" />
+        <img src="https://images.unsplash.com/photo-1516387938699-a93567ec168e?q=80&w=1400&auto=format&fit=crop" alt="Mediawijs online"/>
       </div>
     </div>
   </section>
@@ -165,25 +162,11 @@
           <li>Middelen: docentengids (PDF), differentiatie-tips, klassikale demo.</li>
           <li>Werkt op: Chromebooks, Windows, macOS (browser).</li>
         </ul>
-        <a href="#" class="btn btn-primary" onclick="plausible('demo-aanvraag-groep78')">Vraag een demo aan</a>
+        <a href="#" class="btn btn-primary">Vraag een demo aan</a>
         <a href="#" class="btn btn-secondary">Download voorbeeldles (PDF)</a>
       </div>
       <div class="image-content">
-        <img src="https://images.unsplash.com/photo-1516387938699-a93567ec168e?q=80&w=1440&auto=format&fit=crop" alt="Les in de klas" />
-      </div>
-    </div>
-  </section>
-
-  <!-- ===== FAQ (kort) ===== -->
-  <section class="info-section">
-    <div class="container split-container">
-      <div class="text-content">
-        <h2>FAQ</h2>
-        <ul>
-          <li>Werkt dit op Chromebooks? — Ja, alles draait in de browser.</li>
-          <li>Heb je een account nodig? — Niet voor de demo’s.</li>
-          <li>Bewaren jullie gegevens? — Nee, demo-voortgang staat alleen lokaal.</li>
-        </ul>
+        <img src="https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?q=80&w=1400&auto=format&fit=crop" alt="Lesmateriaal"/>
       </div>
     </div>
   </section>
@@ -193,7 +176,7 @@
     <p>© 2025 Codeblocks • Een initiatief van <a href="https://howtohack.nl" target="_blank" rel="noopener">How to Hack</a></p>
   </footer>
 
-  <!-- ===== BLOCKLY DEMO MODAL (placeholder) ===== -->
+  <!-- ===== MODAL (Blockly demo hook) ===== -->
   <div class="modal" id="blocklyModal" role="dialog" aria-modal="true" aria-labelledby="blocklyTitle">
     <div class="modal-card">
       <div class="modal-head">
@@ -204,59 +187,89 @@
         <button class="close-x" data-close>&times;</button>
       </div>
       <div class="modal-body" id="blocklyContainer">
-        <!-- Hook: hier komt de echte Blockly canvas / iframe -->
-        <p>Hier komt de interactieve puzzel (grid + blokken). We tonen straks timer, hints en confetti.</p>
+        <!-- Hier komt straks de echte puzzel -->
+        <p>Hier komt de interactieve puzzel (grid + blokken). We tonen timer, hints en confetti bij succes.</p>
         <button class="btn btn-secondary" id="mockComplete">Markeer als voltooid</button>
       </div>
     </div>
   </div>
 
-  <!-- Subpage JS (lichtgewicht) -->
+  <!-- ===== Subpagina JS (modal + quiz + localStorage badges) ===== -->
   <script>
-    // Modal open/close
-    document.querySelectorAll('[data-open]').forEach(btn=>{
+    const $ = (s,el=document)=>el.querySelector(s);
+    const $$ = (s,el=document)=>[...el.querySelectorAll(s)];
+
+    // Reveal anim (werkt met jouw main.js ook, maar dit vangt het af als main.js niet geladen is)
+    const animatedEls = document.querySelectorAll('.content-card, .split-container > *');
+    if ('IntersectionObserver' in window){
+      const io = new IntersectionObserver(es=>{
+        es.forEach(e=>{if(e.isIntersecting){e.target.classList.add('animate');io.unobserve(e.target);}});
+      },{threshold:.15});
+      animatedEls.forEach(el=>io.observe(el));
+    } else animatedEls.forEach(el=>el.classList.add('animate'));
+
+    // Modal
+    $$('[data-open]').forEach(btn=>{
       btn.addEventListener('click', ()=>{
-        const id = btn.getAttribute('data-open');
-        document.getElementById(id)?.classList.add('open');
+        const m = document.getElementById(btn.getAttribute('data-open'));
+        m?.classList.add('open');
+        m?.querySelector('[data-close]')?.focus();
       });
     });
-    document.querySelectorAll('[data-close]').forEach(btn=>{
+    $$('[data-close]').forEach(btn=>{
       btn.addEventListener('click', ()=> btn.closest('.modal')?.classList.remove('open'));
     });
-    document.getElementById('blocklyModal')?.addEventListener('click', (e)=>{
+    $('#blocklyModal')?.addEventListener('click', e=>{
       if(e.target.id==='blocklyModal') e.currentTarget.classList.remove('open');
     });
 
-    // Mock “voltooid” tot de echte demo staat
-    const mockBtn = document.getElementById('mockComplete');
-    if (mockBtn){
-      mockBtn.addEventListener('click', ()=>{
-        localStorage.setItem('demoBlocklyDone','true');
-        plausible('blockly-demo-voltooid');
-        alert('Nice! (Demo gemarkeerd als voltooid — vervangen we straks door echte finish-event)');
-      });
-    }
+    // Mock voltooid (tot echte puzzel er is)
+    $('#mockComplete')?.addEventListener('click', ()=>{
+      localStorage.setItem('demoBlocklyDone','true');
+      alert('Nice! Demo gemarkeerd als voltooid (vervangen we straks door echte finish-event).');
+      // badge tonen
+      addBadge('.content-card:nth-of-type(2) .card-content .meta','✔ Demo voltooid','done');
+    });
 
-    // Mini-quiz logica (3 vragen)
-    const quizEl = document.getElementById('quiz');
-    const resultEl = document.getElementById('quizResult');
+    // Quiz
     const answers = {};
-    quizEl?.addEventListener('click', e=>{
+    $('#quiz')?.addEventListener('click', e=>{
       const btn = e.target.closest('button[data-q]');
       if(!btn) return;
-      const q = btn.dataset.q;
-      const a = btn.dataset.a;
-      answers[q] = a === 'right';
-      [...btn.parentElement.children].forEach(b=>b.style.background='');
-      btn.style.background='rgba(115,85,255,.18)';
+      const {q,a}=btn.dataset;
+      $$('.choices button', btn.parentElement).forEach(b=>b.setAttribute('aria-pressed','false'));
+      btn.setAttribute('aria-pressed','true');
+      answers[q] = (a==='right');
     });
-    document.getElementById('quizFinish')?.addEventListener('click', ()=>{
-      const total = [1,2,3].filter(i=>answers[i]).length;
-      resultEl.style.display='block';
-      resultEl.textContent = `Score: ${total}/3 — ${total===3?'Top!':'Kijk nog even naar de feedback in de keuzes.'}`;
+    $('#quizFinish')?.addEventListener('click', ()=>{
+      const total = ['1','2','3'].filter(k=>answers[k]).length;
+      const r = $('#quizResult');
+      r.style.display='block';
+      r.textContent = `Score: ${total}/3 — ${total===3?'Geweldig! ✅':'Check de feedback in de keuzes en probeer nog eens.'}`;
       localStorage.setItem('demoMediaDone', String(total));
-      plausible('mediawijsheid-quiz-afgerond', {props:{score: total}});
+      if (total===3) addBadge('.content-card:nth-of-type(1) .card-content .meta','🏅 Quiz 3/3','quiz');
     });
+
+    // Badges uit storage
+    (function restoreBadges(){
+      try{
+        if (localStorage.getItem('demoBlocklyDone')==='true'){
+          addBadge('.content-card:nth-of-type(2) .card-content .meta','✔ Demo voltooid','done');
+        }
+        const mq = parseInt(localStorage.getItem('demoMediaDone')||'0',10);
+        if (mq>=3){
+          addBadge('.content-card:nth-of-type(1) .card-content .meta','🏅 Quiz 3/3','quiz');
+        }
+      }catch{}
+    })();
+
+    function addBadge(selector, text, key){
+      const wrap = document.querySelector(selector);
+      if(!wrap || wrap.querySelector(`[data-badge="${key}"]`)) return;
+      const s = document.createElement('span');
+      s.className='badge'; s.dataset.badge=key; s.textContent=text;
+      wrap.appendChild(s);
+    }
   </script>
 </body>
 </html>
