--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="header-actions">
           <a href="https://login.codeblocks.nl/" class="btn btn-secondary">Login</a>
-          <a href="#demo" class="btn btn-primary">Vraag demo aan</a>
+          <a href="https://codeblocks.nl/demo/" class="btn btn-primary">Vraag demo aan</a>
         </div>
       </div>
     </header>
