--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="container">
         <h1>Leer programmeren met Codeblocks</h1>
         <p>Ontdek de wereld van code op de leukste en interactievste manier voor scholen!</p>
-        <a href="#demo" class="btn btn-primary btn-large" onclick="plausible('demo-aanvraag')">Vraag een gratis demo aan</a>
+        <a href="https://codeblocks.nl/demo/" class="btn btn-primary btn-large" onclick="plausible('demo-aanvraag')">Vraag een gratis demo aan</a>
       </div>
     </section>
 
