--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     <!-- ===== HERO ===== -->
     <section class="hero-section" id="home">
       <div class="container">
-        <h1>Leer programmeren met Codeblocks</h1>
+        <h1>Jij maakt de lessen,
+wij de software.</h1>
         <p>Ontdek de wereld van code op de leukste en interactievste manier voor scholen!</p>
         <a href="https://codeblocks.nl/demo/" class="btn btn-primary btn-large" onclick="plausible('demo-aanvraag')">Vraag een gratis demo aan</a>
       </div>
