Update redirect URL for go button

--- a/one-click/index.html
+++ b/one-click/index.html
@@ -818,7 +818,7 @@
     });
 
     goBtn.addEventListener('click', ()=>{
-      location.href = '/sim/1';
+      location.href = '/one-click/sim/1';
     });
   </script>
 </body>
