Update link in 1.html to correct path

--- a/one-click/sim/1.html
+++ b/one-click/sim/1.html
@@ -280,7 +280,7 @@
         <p>Nu we dat hebben gehad, laten we doorgaan naar het <em>avontuur…</em></p>
       </div>
 
-      <a class="btn" href="/sim/2" id="continueBtn">
+      <a class="btn" href="/one-click/sim/2" id="continueBtn">
         <span class="btn-icon">▶</span>
         <span>Ga door</span>
       </a>
